# kubernetes-iris

./: .env.example  .gitignore  Makefile  README.md  SETUP_MINIKUBE.md  pyproject.toml
.devcontainer/: Dockerfile  docker-compose.yml
docker/: Dockerfile.serve  Dockerfile.train
k8s/local/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  pv-local.yaml  service.yaml  training-job.yaml
scripts/: build_images.sh  deploy_local.sh  setup_gke.sh  setup_minikube.sh
src/iris_classifier/: __init__.py  config.py  model.py  serve.py  train.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_model.py  test_utils.py
