[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = "ML classifier for Iris dataset with K8s deployment"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "iris_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pandas = "^2.2.0"
numpy = "^1.26.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
mlflow = "^2.10.0"
google-cloud-storage = "^2.14.0"
kfp = "^2.6.0"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
ipython = "^8.20.0"
jupyter = "^1.0.0"
httpx = "^0.26.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
train = "iris_classifier.train:main"
serve = "iris_classifier.serve:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=iris_classifier --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
